Fix padding in "random info" section
Padding was overflowing onto subtext instead of going below it

--- a/styles.css
+++ b/styles.css
@@ -111,9 +111,10 @@ button {
 .info img {
     border-radius: 25px;
     border: 2px solid #3882F8; 
-}
-
-.info img, .info {
     width: 150px;
     height: 150px;
+}
+
+.info {
+    width: 150px;
 }
